@@ -1,3 +1,8 @@
+2007-01-25  Jean Brefort  <jean.brefort@normalesup.org>
+
+	* src/formats/xml/cdxmlformat.cpp: add some stereochemistry and initial
+	write support (not enabled).
+
 2007-01-24  Jean Brefort  <jean.brefort@normalesup.org>
 
 	* src/formats/xml/Makefile.am: add cdxmlformat.
